--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
     "react": "^19.1.1",
@@ -36,6 +37,7 @@
     "react-share": "^5.2.2",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.12",
     "yup": "^1.7.0"
   },
